# cache_flow

./: .gitignore  CacheFlow.ipynb  CacheFlow_Prototype.ipynb  CacheFlow_real_plots.ipynb  CacheFlow_updated.ipynb  Cacheflow_library_final.ipynb  Complex Engineering Problem in FYP.docx  README.md  Sayem.txt  Thesis tables.xlsx  baseline_papers.json  cacheflow_lib.ipynb  doc_Thesis_Report_v2.docx  pyproject.toml  test1.ipynb  thesis.py
Proposal/: Proposal Presentation.pptx
examples/: JetMoe8b.ipynb  JetMoe8b.md  Qwenv2Thunder.ipynb  Qwenv2Thunder.md  gpt_oss_safeguard_20b.ipynb  gpt_oss_safeguard_20b.md  granite1ba400.ipynb  granite1ba400.md  granite3ba800.ipynb  granite3ba800.md
final/: bench_raw.csv  bench_summary.csv  final.ipynb
report_files/: Introduction.md  Results_and_Discussion.md  abstract_and_keywords.md  conclusion_chapter.md  methodology_chapter.md  new.md
src/cacheflow/: __init__.py  optimizer.py
