[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "transformers>=4.57.6",
]
