[project]
name = "cacheflow"
version = "0.1.0"
description = "Software-Level Expert Scheduling for Mixture-of-Experts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.45.0",
    "accelerate>=0.27.0",
    "safetensors>=0.4.2",
    "rich>=12.3.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"